# oawidgets

./: .gitignore  AUTHORS.rst  HISTORY.rst  README.rst  appveyor.yml  pyproject.toml  requirements.txt  setup.py
.github/actions/: action-build-publish-anaconda.yml
.github/actions/build-publish-anaconda/: action.yml
.github/workflows/: conda-package-build.yml
.pkglts/: pkg_cfg.json  pkg_hash.json  pkg_version.json
conda/: meta.yaml
doc/: authors.rst  conf.py  environment.yml  index.rst  usage.rst
doc/examples/: lpy_lpymagic.ipynb  mtg.html  mtg_analysis.ipynb  mtg_plantframe.ipynb  pyvis_test.ipynb  sphere.ipynb
doc/examples/hydroshoot_tutorial/output/: mtg20120801110000.pckl  time_series.output
doc/notebook/: lorenz_attractor.ipynb  plantframe.ipynb  sph.html  sphere.html  sphere.ipynb  sphere.rst
example/: Untitled.ipynb  lpymagic.ipynb  mtg.html  mtg_analysis.ipynb  plantframe.ipynb  plantgl2k3d.ipynb  plantgl_objects.ipynb  plantglbasic.ipynb  pyvis_test.ipynb  sphere.ipynb
example/hydroshoot_tutorial/: hydroshoot.ipynb  hydroshoot_grapevine.ipynb  mtg.html  test.py
example/hydroshoot_tutorial/output/: mtg20120801110000.pckl
src/oawidgets/: __init__.py  lpymagic.py  mtg.py  plantgl.py  version.py
test/: conftest.py
